Fixed the Darkmode button being hidden behind elements.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,19 +3,21 @@
     width: 100%;
     height: calc(100vh - 56px);
     object-fit: cover;
-    z-index: 2;
+    z-index: 101;
+    position: relative;
 }
 
 #sticky
 {
     position: sticky;
     top:0;
-    z-index: 1;
+    z-index: 101;
 }
 
 #navbar
 {
     background-color: #2c3137;
+    z-index: 101;
 }
 
 .tab-body
@@ -34,6 +36,8 @@
     margin-left: 0;
     margin-right: 0;
     font-size: .75rem;
+    z-index: 101;
+    position: relative;
 }
 
 .socialMedia, .fab
@@ -78,12 +82,8 @@
     border-radius: 50%;
 }
 
-.float
+.darkmode-toggle
 {
-    position: fixed;
-    left: unset;
-    right: 39px;
-    top: 39px;
     z-index: 0;
 }
 
@@ -107,4 +107,8 @@
 {
     width: 100%;
     height: 50vh;
+}
+
+body .darkmode-toggle {
+    z-index: 100;
 }
